--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,7 @@
-* {
-    box-sizing: border-box;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html, body {
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
-  }
-
-.App{
-    overflow: hidden;
-    background-color: rgb(24, 22, 22);
-    height: 100vh;
-    width: 100vw;
-}
 
 .Conatiner{
     /* display: grid;
@@ -22,13 +10,13 @@ html, body {
     'content'; */
     
 }
-
+/* 
 .Title-Container{
    
     margin: 0 auto;
     background-color: gray;
     border: 1px dashed green;
-}
+} */
 
 .main-title{
     text-align: center;
@@ -36,15 +24,15 @@ html, body {
     border: 1px dashed red;
 }
 
-.main-grid {
+/* .main-grid {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px dashed blue;
-}
+} */
 
-.main-grid button {
+/* .main-grid button {
     height: 5vh;
     width: 20vw;
     background-color: blue;
@@ -52,7 +40,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .buttonContainer {
     height: 90vh;
@@ -66,15 +54,3 @@ html, body {
     height: 70vh;
 }
 
-
-.ToDoList{
-    
-}
-
-.HomeButton{  
-    
-}
-
-.HomeButton:hover {
-    background-color: red;
-}
